--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-boto3 = "requests"
+boto3 = "^1.34.159"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
